14-Ingress-SSL-with-LetsEncrypt/kube-manifests/03-Ingress-SSL-Resource/01-Ingress-SSL.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ssl
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt    
spec:
  rules:
  - host: sapp1.agarwalateetm365.com
    http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: app1-nginx-clusterip-service
            port:
              number: 80
  - host: sapp2.agarwalateetm365.com
    http:
      paths:
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: app2-nginx-clusterip-service
            port:
              number: 80          
  tls:
  - hosts:
    - sapp1.agarwalateetm365.com
    secretName: sapp1-agarwalateetm365-secret           
  - hosts:
    - sapp2.agarwalateetm365.com
    secretName: sapp2-agarwalateetm365-secret
